--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div>
       <h2>さぶたいとる１</h2>
       <div>
-        ほんぶん１
+        <a href=point.html>ポイントページへ</a>
       </div>
     </div>
 
